fix swagger to allow redirect
